.kube/ingress-middleware.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: yagami-strip-prefix
  namespace: yagami
spec:
  stripPrefix:
    prefixes:
      - /v1/imagegen
