.kube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yagami
  namespace: yagami
  labels:
    app: yagami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yagami
  template:
    metadata:
      labels:
        app: yagami
    spec:
      containers:
        - name: yagami-container
          image: docker.pkg.github.com/mikibot/yagami/yagami:latest
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"
            limits:
              memory: "400Mi"
              cpu: "400m"
          ports:
            - containerPort: 8080
      volumes:
        - name: secret
          secret:
            secretName: yagami-secret
            defaultMode: 0400
      imagePullSecrets:
        - name: github-pull-secret
