.kube/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: yagami-ingress
  namespace: yagami
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`api.miki.bot`) && PathPrefix(`/v1/imagegen`)
      kind: Rule
      services:
        - name: yagami
          port: 80
      middlewares:
        - name: yagami-strip-prefix
